# turbo_challenge

./: .gitignore  .pre-commit-config.yaml  Note Taking App.pen  Product.md  README.md  docker-compose.yml
.agent/: rules.md
.agent/skills/django_backend/: SKILL.md
.agent/skills/react_frontend/: SKILL.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  pre-commit.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  conftest.py  pyproject.toml
backend/accounts/: serializers.py  tests.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/notes/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py  0002_alter_category_color.py
backend/scripts/: entrypoint.sh
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/e2e/: fixtures.ts  login.spec.ts  redirect.spec.ts  visual.spec.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/mocks/: handlers.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: dashboard.module.css  page.tsx
frontend/src/app/login/: auth-page.module.css  login.module.css  page.tsx  register.module.css
frontend/src/app/register/: page.tsx
frontend/src/components/: NoteCard.module.css
frontend/src/components/NoteCard/: NoteCard.tsx
frontend/src/components/__tests__/: NoteCard.test.tsx
frontend/src/components/modals/: Modal.module.css  NewCategoryModal.tsx  NewNoteModal.tsx  NoteModal.module.css
frontend/src/providers/: QueryProvider.tsx
frontend/src/services/api/: auth.ts  categories.ts  client.ts  notes.ts
frontend/src/types/: index.ts
(+6 files in other folders)
